[project]
name = "multipers"
version = "2.5.0b4"
description = "Multiparameter Topological Persistence for Machine Learning"
readme = "README.md"
authors = [
  { name = "David Loiseaux", email = "david.lapous@proton.me" },
  { name = "Hannah Schreiber", email = "hannah.schreiber@inria.fr"},
]
maintainers = [{ name = "David Loiseaux", email = "david.lapous@proton.me" }]
dependencies = [
  #`import multipers`
  "numpy",
  "gudhi>=3.8", ## Needs simplextree serialize
  "tqdm",
  "scipy",
  "joblib",
  "matplotlib",
  #`pytest multipers`
  "scikit-learn",
  "filtration-domination",
  "pykeops",
  "pot"
]
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = [
  "LICENSE",
  "licenses/LGPL-3.0-or-later.txt",
  "THIRD_PARTY_NOTICES.md",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["TDA", "Persistence", "Multiparameter", "sklearn", "autodiff"]



[build-system]
requires = [
  "scikit-build-core",
  "numpy",
  "Cython",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.27"
cmake.build-type = "Release"
build-dir = "build"

[tool.scikit-build.cmake.define]
CMAKE_COLOR_DIAGNOSTICS = "ON"

[tool.scikit-build.wheel]
packages = []
exclude = [
  "**/*.pyx",
  "**/*.pxd",
  "**/*.tp",
  "**/*.cpp",
  "**/*.h",
  "**/*.hpp",
  "**/docs/**",
  "**/benchmarks/**",
  "**/ext/**",
]

[tool.scikit-build.sdist]
inclusion-mode = "manual"
exclude = [
  "docs",
  "tests",
  "benchmarks/**",
  "build",
  "dist",
  "**/__pycache__/**",
  "**/*.ipynb",
  "**/*.so",
  "**/*.dylib",
  "**/*.dll",
  "**/*.pyd",
  "multipers/**/*.cpp",
  "generated",
  "cython",
  "CMakeFiles",
  "multipers.egg-info",
  "tmp",
  "*.sh",
  "ext/**/*.txt",
  "ext/**/*.md",
  "*.cff",
  "*.bin",
  "*.sky",
  "*.sccsum",
  "*.firep",
  "*.pdf",
  "*.js",
  "*.css",
  "*.map",
  "*.md5",
  "*.tex",
  "*.scc",
  "*.pyc",
  "*.firep",
  "CMakeCache.txt",
  "compile_commands.json",
  "Makefile",
  "*.png",
  ".*",
  "*.yml",
  "cmake_install.cmake",
  ".DS_Store",
]
include = [
  "multipers/",
  "multipers/tests",
  "tools",
  "ext/**/*.h",
  "ext/**/*.hpp",
  "ext/**/*.cpp",
  "ext/**/LICENSE",
  "ext/**/COPYING",
  "ext/**/COPYING.LESSER",
  "options.py",
  "_tempita_grid_gen.py",
  "multipers/**/*.tp",
  "multipers/**/*.pyx",
  "multipers/**/*.pxd",
  "multipers/**/*.hpp",
  "multipers/**/*.h",
  "CITATION.cff",
  "LICENSE",
  "README.md",
  "licences/LGPL-3.0-or-later.txt",
  "THIRD_PARTY_NOTICES.md",
]

[project.urls]
source = "https://github.com/DavidLapous/multipers"
download = "https://pypi.org/project/multipers/#files"
tracker = "https://github.com/DavidLapous/multipers/issues"
"release notes" = "https://github.com/DavidLapous/multipers/releases"
