[project]
name = "multipers"
version = "2.6.0b1"
description = "Multiparameter Topological Persistence for Machine Learning"
readme = "README.md"
authors = [
  { name = "David Loiseaux", email = "david.lapous@proton.me" },
  { name = "Hannah Schreiber", email = "hannah.schreiber@inria.fr"},
]
maintainers = [{ name = "David Loiseaux", email = "david.lapous@proton.me" }]
dependencies = [
  #`import multipers`
  "numpy",
  "gudhi>=3.8", ## Needs simplextree serialize
  "tqdm",
  "scipy",
  "joblib",
  "matplotlib",
  #`pytest multipers`
  "scikit-learn",
  "filtration-domination",
  "pykeops",
  "pot"
]
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = [
  "LICENSE",
  "licenses/LGPL-3.0-or-later.txt",
  "THIRD_PARTY_NOTICES.md",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["TDA", "Persistence", "Multiparameter", "sklearn", "autodiff"]



[build-system]
requires = [
  "scikit-build-core>=0.12",
  "numpy",
  "nanobind",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.27"
ninja.version = ">=1.11"
cmake.build-type = "Release"
build-dir = "build"

[tool.scikit-build.cmake.define]
CMAKE_COLOR_DIAGNOSTICS = "ON"

[tool.scikit-build.wheel]
packages = []
exclude = [
  "**/*.pyx",
  "**/*.pxd",
  "**/*.tp",
  "**/*.cpp",
  "**/*.h",
  "**/*.hpp",
  "**/docs/**",
  "**/benchmarks/**",
  "**/ext/**",
]

[tool.scikit-build.sdist]
inclusion-mode = "manual"
exclude = [
  "docs",
  "tests",
  "benchmarks/**",
  "build",
  "build*/**",
  "dist",
  "**/__pycache__/**",
  "multipers/__pycache__/**",
  "**/*.ipynb",
  "**/*.so",
  "**/*.dylib",
  "**/*.dll",
  "**/*.pyd",
  "generated",
  "cython",
  "CMakeFiles",
  "multipers.egg-info",
  "tmp",
  "error_log.txt",
  "*.sh",
  "**/.DS_Store",
  "ext/**/*.txt",
  "ext/**/*.md",
  "ext/multi_chunk/**",
  "ext/hera/bindings/**",
  "ext/hera/bottleneck/**",
  "ext/hera/extern/Catch2/**",
  "ext/hera/extern/Catch2/README.md",
  "ext/hera/extern/opts/**",
  "ext/hera/extern/opts/LICENSE",
  "ext/hera/extern/opts/README.md",
  "ext/hera/matching/**",
  "ext/hera/wasserstein/**",
  "ext/multi_chunk/README.md",
  "ext/rhomboidtiling_newer_cgal_version/src/main.cpp",
  "ext/rhomboidtiling_newer_cgal_version/src/tests_*.cpp",
  "ext/rhomboidtiling_newer_cgal_version/src/testutils.h",
  "*.cff",
  "*.bin",
  "*.sky",
  "*.sccsum",
  "*.firep",
  "*.pdf",
  "*.js",
  "*.css",
  "*.map",
  "*.md5",
  "*.tex",
  "*.scc",
  "*.pyc",
  "*.firep",
  "CMakeCache.txt",
  "compile_commands.json",
  "Makefile",
  "*.png",
  ".*",
  "*.yml",
  "cmake_install.cmake",
  ".DS_Store",
]
include = [
  "multipers/",
  "multipers/tests",
  "tools/tempita_grid_gen.py",
  "tools/codegen/_registry.py",
  "tools/core/**",
  # Keep this ext whitelist aligned with
  # `python tools/check_sdist_ext_whitelist.py --check-pyproject`.
  "ext/2pac/*.h",
  "ext/2pac/*.hpp",
  "ext/2pac/*.cpp",
  "ext/AIDA/include/**",
  "ext/AIDA/src/**",
  "ext/Persistence-Algebra/include/**",
  "ext/mpfree/include/**",
  "ext/mpfree/mpp_utils_mod/include/**",
  "ext/mpfree/phat_mod/include/**",
  "ext/mpfree/scc_mod/include/**",
  "ext/phat/include/**",
  "ext/multi_critical/include/**",
  "ext/multi_critical/mpfree_mod/include/**",
  "ext/multi_critical/mpp_utils_mod/include/**",
  "ext/multi_critical/multi_chunk_mod/include/**",
  "ext/multi_critical/phat_mod/include/**",
  "ext/multi_critical/scc_mod/include/**",
  "ext/function_delaunay/include/**",
  "ext/function_delaunay/mpfree_mod/include/**",
  "ext/function_delaunay/mpp_utils_mod/include/**",
  "ext/function_delaunay/multi_chunk_mod/include/**",
  "ext/function_delaunay/phat/include/**",
  "ext/function_delaunay/scc_mod/include/**",
  "ext/hera/include/hera/**",
  "ext/hera/extern/phat/**",
  "ext/rhomboidtiling_newer_cgal_version/src/*.h",
  "ext/rhomboidtiling_newer_cgal_version/src/*.hpp",
  "ext/rhomboidtiling_newer_cgal_version/src/rhomboid.cpp",
  "ext/rhomboidtiling_newer_cgal_version/src/utils.cpp",
  "ext/AIDA/LICENSE",
  "ext/Persistence-Algebra/LICENSE",
  "ext/function_delaunay/COPYING",
  "ext/function_delaunay/phat/COPYING",
  "ext/function_delaunay/phat/COPYING.LESSER",
  "ext/mpfree/COPYING",
  "ext/mpfree/COPYING.LESSER",
  "ext/mpfree/phat_mod/COPYING",
  "ext/mpfree/phat_mod/COPYING.LESSER",
  "ext/multi_critical/COPYING",
  "ext/multi_critical/COPYING.LESSER",
  "ext/multi_critical/phat_mod/COPYING",
  "ext/multi_critical/phat_mod/COPYING.LESSER",
  "ext/phat/COPYING",
  "ext/phat/COPYING.LESSER",
  "options.py",
  "multipers/**/*.hpp",
  "multipers/**/*.h",
  "CITATION.cff",
  "LICENSE",
  "README.md",
  "licenses/LGPL-3.0-or-later.txt",
  "THIRD_PARTY_NOTICES.md",
]

[project.urls]
source = "https://github.com/DavidLapous/multipers"
download = "https://pypi.org/project/multipers/#files"
tracker = "https://github.com/DavidLapous/multipers/issues"
"release notes" = "https://github.com/DavidLapous/multipers/releases"
