[project]
name = "multipers"
version = "2.6.0b1"
description = "Multiparameter Topological Persistence for Machine Learning"
readme = "README.md"
authors = [
  { name = "David Loiseaux", email = "david.lapous@proton.me" },
  { name = "Hannah Schreiber", email = "hannah.schreiber@inria.fr"},
]
maintainers = [{ name = "David Loiseaux", email = "david.lapous@proton.me" }]
dependencies = [
  #`import multipers`
  "numpy",
  "gudhi>=3.8", ## Needs simplextree serialize
  "tqdm",
  "scipy",
  "joblib",
  "matplotlib",
  #`pytest multipers`
  "scikit-learn",
  "filtration-domination",
  "pykeops",
  "pot"
]
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = [
  "LICENSE",
  "licenses/LGPL-3.0-or-later.txt",
  "THIRD_PARTY_NOTICES.md",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["TDA", "Persistence", "Multiparameter", "sklearn", "autodiff"]



[build-system]
requires = [
  "scikit-build-core>=0.12",
  "numpy",
  "nanobind",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.27"
ninja.version = ">=1.11"
cmake.build-type = "Release"
build-dir = "build"

[tool.scikit-build.cmake.define]
CMAKE_COLOR_DIAGNOSTICS = "ON"

[tool.scikit-build.wheel]
packages = []
exclude = [
  "**/*.pyx",
  "**/*.pxd",
  "**/*.tp",
  "**/*.cpp",
  "**/*.h",
  "**/*.hpp",
  "**/docs/**",
  "**/benchmarks/**",
  "**/ext/**",
]

[tool.scikit-build.sdist]
inclusion-mode = "manual"
exclude = [
  "docs",
  "tests",
  "benchmarks/**",
  "build",
  "build*/**",
  "dist",
  "**/__pycache__/**",
  "multipers/__pycache__/**",
  "**/*.ipynb",
  "**/*.so",
  "**/*.dylib",
  "**/*.dll",
  "**/*.pyd",
  "generated",
  "cython",
  "CMakeFiles",
  "multipers.egg-info",
  "tmp",
  "error_log.txt",
  "*.sh",
  "**/.DS_Store",
  "ext/**/*.txt",
  "ext/**/*.md",
  "ext/multi_chunk/**",
  "ext/hera/bindings/**",
  "ext/hera/bottleneck/**",
  "ext/hera/extern/Catch2/**",
  "ext/hera/extern/Catch2/README.md",
  "ext/hera/extern/opts/**",
  "ext/hera/extern/opts/LICENSE",
  "ext/hera/extern/opts/README.md",
  "ext/hera/matching/**",
  "ext/hera/wasserstein/**",
  "ext/multi_chunk/README.md",
  "ext/rhomboidtiling_newer_cgal_version/src/main.cpp",
  "ext/rhomboidtiling_newer_cgal_version/src/tests_*.cpp",
  "ext/rhomboidtiling_newer_cgal_version/src/testutils.h",
  "*.cff",
  "*.bin",
  "*.sky",
  "*.sccsum",
  "*.firep",
  "*.pdf",
  "*.js",
  "*.css",
  "*.map",
  "*.md5",
  "*.tex",
  "*.scc",
  "*.pyc",
  "*.firep",
  "CMakeCache.txt",
  "compile_commands.json",
  "Makefile",
  "*.png",
  ".*",
  "*.yml",
  "cmake_install.cmake",
  ".DS_Store",
]
include = [
  "multipers/",
  "multipers/tests",
  "tools/tempita_grid_gen.py",
  "tools/codegen/_registry.py",
  "tools/core/**",
  # BEGIN GENERATED SDIST EXT INCLUDE
  # Generated from `ninja -t deps`; update with
  # `python tools/update_sdist_ext_whitelist.py --write`.
  "ext/2pac/ArrayColumn.cpp",
  "ext/2pac/ArrayColumn.hpp",
  "ext/2pac/HeapColumn.cpp",
  "ext/2pac/HeapColumn.hpp",
  "ext/2pac/block_column_matrix.cpp",
  "ext/2pac/block_column_matrix.hpp",
  "ext/2pac/chunk.cpp",
  "ext/2pac/chunk.hpp",
  "ext/2pac/complexes.hpp",
  "ext/2pac/factor.cpp",
  "ext/2pac/factor.hpp",
  "ext/2pac/grade.hpp",
  "ext/2pac/indirect.hpp",
  "ext/2pac/lw.cpp",
  "ext/2pac/lw.hpp",
  "ext/2pac/matrices.cpp",
  "ext/2pac/matrices.hpp",
  "ext/2pac/minimize.cpp",
  "ext/2pac/minimize.hpp",
  "ext/2pac/priority_queue.hpp",
  "ext/2pac/skip_vector.hpp",
  "ext/2pac/time_measurement.cpp",
  "ext/2pac/time_measurement.hpp",
  "ext/2pac/typedefs.hpp",
  "ext/2pac/utils.hpp",
  "ext/AIDA/include/aida_interface.hpp",
  "ext/AIDA/include/config.hpp",
  "ext/AIDA/include/option_parser.hpp",
  "ext/AIDA/include/types.hpp",
  "ext/AIDA/src/aida_decompose.cpp",
  "ext/AIDA/src/aida_decompose.hpp",
  "ext/AIDA/src/aida_functions.cpp",
  "ext/AIDA/src/aida_functions.hpp",
  "ext/AIDA/src/aida_helpers.cpp",
  "ext/AIDA/src/aida_helpers.hpp",
  "ext/AIDA/src/aida_interface.cpp",
  "ext/AIDA/src/block.cpp",
  "ext/AIDA/src/block.hpp",
  "ext/AIDA/src/config.cpp",
  "ext/AIDA/src/option_parser.cpp",
  "ext/Persistence-Algebra/include/grlina/bitset_algebra.hpp",
  "ext/Persistence-Algebra/include/grlina/column_types.hpp",
  "ext/Persistence-Algebra/include/grlina/dense_matrix.hpp",
  "ext/Persistence-Algebra/include/grlina/general.hpp",
  "ext/Persistence-Algebra/include/grlina/graded_linalg.hpp",
  "ext/Persistence-Algebra/include/grlina/graded_matrix.hpp",
  "ext/Persistence-Algebra/include/grlina/grid_scheduler.hpp",
  "ext/Persistence-Algebra/include/grlina/homomorphisms.hpp",
  "ext/Persistence-Algebra/include/grlina/matrix_base.hpp",
  "ext/Persistence-Algebra/include/grlina/orders_and_graphs.hpp",
  "ext/Persistence-Algebra/include/grlina/r2graded_matrix.hpp",
  "ext/Persistence-Algebra/include/grlina/r3graded_matrix.hpp",
  "ext/Persistence-Algebra/include/grlina/sparse_matrix.hpp",
  "ext/Persistence-Algebra/include/grlina/to_quiver.hpp",
  "ext/function_delaunay/include/function_delaunay/Delaunay_triangulation_accessors.h",
  "ext/function_delaunay/include/function_delaunay/Grade_map.h",
  "ext/function_delaunay/include/function_delaunay/Meb_accessors.h",
  "ext/function_delaunay/include/function_delaunay/Miniball.hpp",
  "ext/function_delaunay/include/function_delaunay/Point_with_densities.h",
  "ext/function_delaunay/include/function_delaunay/compute_meb_radii_of_simplex_tree.h",
  "ext/function_delaunay/include/function_delaunay/function_delaunay_with_meb.h",
  "ext/function_delaunay/include/function_delaunay/get_simplices_from_triangulation.h",
  "ext/function_delaunay/mpfree_mod/include/mpfree/Graded_matrix.h",
  "ext/function_delaunay/mpfree_mod/include/mpfree/Grid_scheduler.h",
  "ext/function_delaunay/mpfree_mod/include/mpfree/global.h",
  "ext/function_delaunay/mpfree_mod/include/mpfree/mpfree.h",
  "ext/function_delaunay/mpfree_mod/include/mpfree/mpfree_subroutines.h",
  "ext/function_delaunay/mpp_utils_mod/include/mpp_utils/Coordinate_traits_with_map.h",
  "ext/function_delaunay/mpp_utils_mod/include/mpp_utils/Graded_matrix.h",
  "ext/function_delaunay/mpp_utils_mod/include/mpp_utils/Graded_matrix_handle.h",
  "ext/function_delaunay/mpp_utils_mod/include/mpp_utils/Pre_column_struct.h",
  "ext/function_delaunay/mpp_utils_mod/include/mpp_utils/basic.h",
  "ext/function_delaunay/mpp_utils_mod/include/mpp_utils/create_graded_matrices_from_pre_column_struct.h",
  "ext/function_delaunay/mpp_utils_mod/include/mpp_utils/create_graded_matrices_from_scc2020.h",
  "ext/function_delaunay/mpp_utils_mod/include/mpp_utils/create_graded_matrices_from_simplex_tree.h",
  "ext/function_delaunay/mpp_utils_mod/include/mpp_utils/create_matrix_from_firep.h",
  "ext/function_delaunay/mpp_utils_mod/include/mpp_utils/sorting_utility.h",
  "ext/function_delaunay/multi_chunk_mod/include/multi_chunk/Graded_matrix.h",
  "ext/function_delaunay/multi_chunk_mod/include/multi_chunk/basic.h",
  "ext/function_delaunay/multi_chunk_mod/include/multi_chunk/multi_chunk.h",
  "ext/function_delaunay/phat/include/phat/boundary_matrix.h",
  "ext/function_delaunay/phat/include/phat/helpers/misc.h",
  "ext/function_delaunay/phat/include/phat/helpers/thread_local_storage.h",
  "ext/function_delaunay/phat/include/phat/representations/Container_traits.h",
  "ext/function_delaunay/phat/include/phat/representations/Pivot_representation.h",
  "ext/function_delaunay/phat/include/phat/representations/Uniform_representation.h",
  "ext/function_delaunay/phat/include/phat/representations/bit_tree_pivot_column.h",
  "ext/function_delaunay/phat/include/phat/representations/default_representations.h",
  "ext/function_delaunay/phat/include/phat/representations/full_pivot_column.h",
  "ext/function_delaunay/phat/include/phat/representations/heap_column_rep.h",
  "ext/function_delaunay/phat/include/phat/representations/heap_pivot_column.h",
  "ext/function_delaunay/phat/include/phat/representations/list_column_rep.h",
  "ext/function_delaunay/phat/include/phat/representations/set_column_rep.h",
  "ext/function_delaunay/phat/include/phat/representations/sparse_pivot_column.h",
  "ext/function_delaunay/phat/include/phat/representations/vector_column_rep.h",
  "ext/function_delaunay/scc_mod/include/scc/Column_data.h",
  "ext/function_delaunay/scc_mod/include/scc/Scc.h",
  "ext/function_delaunay/scc_mod/include/scc/basic.h",
  "ext/hera/extern/phat/algorithms/standard_reduction.h",
  "ext/hera/extern/phat/algorithms/twist_reduction.h",
  "ext/hera/extern/phat/boundary_matrix.h",
  "ext/hera/extern/phat/compute_persistence_pairs.h",
  "ext/hera/extern/phat/helpers/dualize.h",
  "ext/hera/extern/phat/helpers/misc.h",
  "ext/hera/extern/phat/helpers/thread_local_storage.h",
  "ext/hera/extern/phat/persistence_pairs.h",
  "ext/hera/extern/phat/representations/abstract_pivot_column.h",
  "ext/hera/extern/phat/representations/bit_tree_pivot_column.h",
  "ext/hera/extern/phat/representations/vector_vector.h",
  "ext/hera/include/hera/bottleneck.h",
  "ext/hera/include/hera/bottleneck/basic_defs_bt.h",
  "ext/hera/include/hera/bottleneck/bottleneck_detail.h",
  "ext/hera/include/hera/bottleneck/bottleneck_detail.hpp",
  "ext/hera/include/hera/bottleneck/bound_match.h",
  "ext/hera/include/hera/bottleneck/bound_match.hpp",
  "ext/hera/include/hera/bottleneck/def_debug_bt.h",
  "ext/hera/include/hera/bottleneck/neighb_oracle.h",
  "ext/hera/include/hera/common.h",
  "ext/hera/include/hera/common/diagram_point.h",
  "ext/hera/include/hera/common/diagram_reader.h",
  "ext/hera/include/hera/common/diagram_traits.h",
  "ext/hera/include/hera/common/hash_combine.h",
  "ext/hera/include/hera/common/infinity.h",
  "ext/hera/include/hera/common/point.h",
  "ext/hera/include/hera/dnn/geometry/euclidean-dynamic.h",
  "ext/hera/include/hera/dnn/geometry/euclidean-fixed.h",
  "ext/hera/include/hera/dnn/local/kd-tree.h",
  "ext/hera/include/hera/dnn/local/kd-tree.hpp",
  "ext/hera/include/hera/dnn/local/search-functors.h",
  "ext/hera/include/hera/dnn/parallel/tbb.h",
  "ext/hera/include/hera/dnn/utils.h",
  "ext/hera/include/hera/matching/bifiltration.h",
  "ext/hera/include/hera/matching/bifiltration.hpp",
  "ext/hera/include/hera/matching/box.h",
  "ext/hera/include/hera/matching/box.hpp",
  "ext/hera/include/hera/matching/cell_with_value.h",
  "ext/hera/include/hera/matching/cell_with_value.hpp",
  "ext/hera/include/hera/matching/common_defs.h",
  "ext/hera/include/hera/matching/common_util.h",
  "ext/hera/include/hera/matching/common_util.hpp",
  "ext/hera/include/hera/matching/dual_box.h",
  "ext/hera/include/hera/matching/dual_box.hpp",
  "ext/hera/include/hera/matching/dual_point.h",
  "ext/hera/include/hera/matching/dual_point.hpp",
  "ext/hera/include/hera/matching/matching_distance.hpp",
  "ext/hera/include/hera/matching/persistence_module.h",
  "ext/hera/include/hera/matching/persistence_module.hpp",
  "ext/hera/include/hera/matching/simplex.h",
  "ext/hera/include/hera/matching/simplex.hpp",
  "ext/hera/include/hera/matching_distance.h",
  "ext/hera/include/hera/wasserstein.h",
  "ext/hera/include/hera/wasserstein/auction_oracle.h",
  "ext/hera/include/hera/wasserstein/auction_oracle_base.h",
  "ext/hera/include/hera/wasserstein/auction_oracle_base.hpp",
  "ext/hera/include/hera/wasserstein/auction_oracle_kdtree_restricted.h",
  "ext/hera/include/hera/wasserstein/auction_oracle_kdtree_restricted.hpp",
  "ext/hera/include/hera/wasserstein/auction_params.h",
  "ext/hera/include/hera/wasserstein/auction_result.h",
  "ext/hera/include/hera/wasserstein/auction_runner_gs.h",
  "ext/hera/include/hera/wasserstein/auction_runner_gs.hpp",
  "ext/hera/include/hera/wasserstein/auction_runner_jac.h",
  "ext/hera/include/hera/wasserstein/auction_runner_jac.hpp",
  "ext/hera/include/hera/wasserstein/basic_defs_ws.h",
  "ext/hera/include/hera/wasserstein/basic_defs_ws.hpp",
  "ext/hera/include/hera/wasserstein/def_debug_ws.h",
  "ext/hera/include/hera/wasserstein/diagonal_heap.h",
  "ext/mpfree/include/mpfree/Graded_matrix.h",
  "ext/mpfree/include/mpfree/Grid_scheduler.h",
  "ext/mpfree/include/mpfree/global.h",
  "ext/mpfree/include/mpfree/mpfree.h",
  "ext/mpfree/include/mpfree/mpfree_subroutines.h",
  "ext/mpfree/mpp_utils_mod/include/mpp_utils/Coordinate_traits_with_map.h",
  "ext/mpfree/mpp_utils_mod/include/mpp_utils/Graded_matrix.h",
  "ext/mpfree/mpp_utils_mod/include/mpp_utils/Graded_matrix_handle.h",
  "ext/mpfree/mpp_utils_mod/include/mpp_utils/Pre_column_struct.h",
  "ext/mpfree/mpp_utils_mod/include/mpp_utils/basic.h",
  "ext/mpfree/mpp_utils_mod/include/mpp_utils/create_graded_matrices_from_pre_column_struct.h",
  "ext/mpfree/mpp_utils_mod/include/mpp_utils/create_graded_matrices_from_scc2020.h",
  "ext/mpfree/mpp_utils_mod/include/mpp_utils/create_matrix_from_firep.h",
  "ext/mpfree/mpp_utils_mod/include/mpp_utils/sorting_utility.h",
  "ext/mpfree/phat_mod/include/phat/boundary_matrix.h",
  "ext/mpfree/phat_mod/include/phat/helpers/misc.h",
  "ext/mpfree/phat_mod/include/phat/helpers/thread_local_storage.h",
  "ext/mpfree/phat_mod/include/phat/representations/Container_traits.h",
  "ext/mpfree/phat_mod/include/phat/representations/Pivot_representation.h",
  "ext/mpfree/phat_mod/include/phat/representations/Uniform_representation.h",
  "ext/mpfree/phat_mod/include/phat/representations/bit_tree_pivot_column.h",
  "ext/mpfree/phat_mod/include/phat/representations/default_representations.h",
  "ext/mpfree/phat_mod/include/phat/representations/full_pivot_column.h",
  "ext/mpfree/phat_mod/include/phat/representations/heap_column_rep.h",
  "ext/mpfree/phat_mod/include/phat/representations/heap_pivot_column.h",
  "ext/mpfree/phat_mod/include/phat/representations/list_column_rep.h",
  "ext/mpfree/phat_mod/include/phat/representations/set_column_rep.h",
  "ext/mpfree/phat_mod/include/phat/representations/sparse_pivot_column.h",
  "ext/mpfree/phat_mod/include/phat/representations/vector_column_rep.h",
  "ext/mpfree/scc_mod/include/scc/Column_data.h",
  "ext/mpfree/scc_mod/include/scc/Scc.h",
  "ext/mpfree/scc_mod/include/scc/basic.h",
  "ext/multi_critical/include/multi_critical/Grade.h",
  "ext/multi_critical/include/multi_critical/basic.h",
  "ext/multi_critical/include/multi_critical/free_resolution.h",
  "ext/multi_critical/mpfree_mod/include/mpfree/Graded_matrix.h",
  "ext/multi_critical/mpfree_mod/include/mpfree/Grid_scheduler.h",
  "ext/multi_critical/mpfree_mod/include/mpfree/global.h",
  "ext/multi_critical/mpfree_mod/include/mpfree/mpfree.h",
  "ext/multi_critical/mpfree_mod/include/mpfree/mpfree_subroutines.h",
  "ext/multi_critical/mpp_utils_mod/include/mpp_utils/Coordinate_traits_with_map.h",
  "ext/multi_critical/mpp_utils_mod/include/mpp_utils/Graded_matrix.h",
  "ext/multi_critical/mpp_utils_mod/include/mpp_utils/Graded_matrix_handle.h",
  "ext/multi_critical/mpp_utils_mod/include/mpp_utils/Pre_column_struct.h",
  "ext/multi_critical/mpp_utils_mod/include/mpp_utils/basic.h",
  "ext/multi_critical/mpp_utils_mod/include/mpp_utils/create_graded_matrices_from_pre_column_struct.h",
  "ext/multi_critical/mpp_utils_mod/include/mpp_utils/create_graded_matrices_from_scc2020.h",
  "ext/multi_critical/mpp_utils_mod/include/mpp_utils/create_matrix_from_firep.h",
  "ext/multi_critical/mpp_utils_mod/include/mpp_utils/sorting_utility.h",
  "ext/multi_critical/multi_chunk_mod/include/multi_chunk/Graded_matrix.h",
  "ext/multi_critical/multi_chunk_mod/include/multi_chunk/basic.h",
  "ext/multi_critical/multi_chunk_mod/include/multi_chunk/multi_chunk.h",
  "ext/multi_critical/phat_mod/include/phat/boundary_matrix.h",
  "ext/multi_critical/phat_mod/include/phat/helpers/misc.h",
  "ext/multi_critical/phat_mod/include/phat/helpers/thread_local_storage.h",
  "ext/multi_critical/phat_mod/include/phat/representations/Container_traits.h",
  "ext/multi_critical/phat_mod/include/phat/representations/Pivot_representation.h",
  "ext/multi_critical/phat_mod/include/phat/representations/Uniform_representation.h",
  "ext/multi_critical/phat_mod/include/phat/representations/bit_tree_pivot_column.h",
  "ext/multi_critical/phat_mod/include/phat/representations/default_representations.h",
  "ext/multi_critical/phat_mod/include/phat/representations/full_pivot_column.h",
  "ext/multi_critical/phat_mod/include/phat/representations/heap_column_rep.h",
  "ext/multi_critical/phat_mod/include/phat/representations/heap_pivot_column.h",
  "ext/multi_critical/phat_mod/include/phat/representations/list_column_rep.h",
  "ext/multi_critical/phat_mod/include/phat/representations/set_column_rep.h",
  "ext/multi_critical/phat_mod/include/phat/representations/sparse_pivot_column.h",
  "ext/multi_critical/phat_mod/include/phat/representations/vector_column_rep.h",
  "ext/multi_critical/scc_mod/include/scc/Column_data.h",
  "ext/multi_critical/scc_mod/include/scc/Scc.h",
  "ext/multi_critical/scc_mod/include/scc/basic.h",
  "ext/phat/include/phat/helpers/misc.h",
  "ext/phat/include/phat/helpers/thread_local_storage.h",
  "ext/phat/include/phat/representations/abstract_pivot_column.h",
  "ext/phat/include/phat/representations/bit_tree_pivot_column.h",
  "ext/phat/include/phat/representations/vector_vector.h",
  "ext/rhomboidtiling_newer_cgal_version/src/bifiltration_cell.h",
  "ext/rhomboidtiling_newer_cgal_version/src/cell_with_radius.h",
  "ext/rhomboidtiling_newer_cgal_version/src/dimensional_traits_2.h",
  "ext/rhomboidtiling_newer_cgal_version/src/dimensional_traits_3.h",
  "ext/rhomboidtiling_newer_cgal_version/src/rhomboid.cpp",
  "ext/rhomboidtiling_newer_cgal_version/src/rhomboid.h",
  "ext/rhomboidtiling_newer_cgal_version/src/rhomboid_tiling.h",
  "ext/rhomboidtiling_newer_cgal_version/src/rhomboid_tiling_impl.h",
  "ext/rhomboidtiling_newer_cgal_version/src/rhomboid_with_radius.h",
  "ext/rhomboidtiling_newer_cgal_version/src/types.h",
  "ext/rhomboidtiling_newer_cgal_version/src/utils.cpp",
  "ext/rhomboidtiling_newer_cgal_version/src/utils.h",
  # Vendored license files kept in the sdist.
  "ext/AIDA/LICENSE",
  "ext/Persistence-Algebra/LICENSE",
  "ext/function_delaunay/COPYING",
  "ext/function_delaunay/phat/COPYING",
  "ext/function_delaunay/phat/COPYING.LESSER",
  "ext/mpfree/COPYING",
  "ext/mpfree/COPYING.LESSER",
  "ext/mpfree/phat_mod/COPYING",
  "ext/mpfree/phat_mod/COPYING.LESSER",
  "ext/multi_critical/COPYING",
  "ext/multi_critical/COPYING.LESSER",
  "ext/multi_critical/phat_mod/COPYING",
  "ext/multi_critical/phat_mod/COPYING.LESSER",
  "ext/phat/COPYING",
  "ext/phat/COPYING.LESSER",
  # END GENERATED SDIST EXT INCLUDE
  "options.py",
  "multipers/**/*.hpp",
  "multipers/**/*.h",
  "CITATION.cff",
  "LICENSE",
  "README.md",
  "licenses/LGPL-3.0-or-later.txt",
  "THIRD_PARTY_NOTICES.md",
]

[project.urls]
source = "https://github.com/DavidLapous/multipers"
download = "https://pypi.org/project/multipers/#files"
tracker = "https://github.com/DavidLapous/multipers/issues"
"release notes" = "https://github.com/DavidLapous/multipers/releases"
